--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,9 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+# Ignore yarn files nad node_modules
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+yarn.lock
